--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,7 +13,7 @@
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     Always a pleasure scaffolding your apps.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
+  <p><button class="btn btn-lg btn-success" ng-click="logout()">Logout!</button></p>
 </div>
 
 <div class="row marketing">
