--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,14 +4,14 @@
     <li><a ng-href="#">About</a></li>
     <li><a ng-href="#">Contact</a></li>
   </ul>
-  <h3 class="text-muted">staticshowdown</h3>
+  <h3 class="text-muted">jukedoge</h3>
 </div>
 
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/doge_avatar.jpeg" alt="jukedoge"><br>
+    So musik. Much songs. Wow
   </p>
   <p><button class="btn btn-lg btn-success" ng-click="logout()">Logout!</button></p>
 </div>
