--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,10 +19,34 @@
 <div class="row">
   <p><button class="btn btn-success" ng-click="addSong()">Add Song</button></p>
 
-  <audio data-player-control="audioPlayer" data-playlist="playlist" audio-player autoplay="true">
+  <audio data-player-control="audioPlayer" data-playlist="playlist" audio-player>
   </audio>
-  <span ng-show="audioPlayer.playing">Player status: Playing</span>
-  <span ng-show="!audioPlayer.playing">Player status: Paused</span>
+
+  <div class="btn-group">
+    <button type="button"
+            class="btn btn-sm btn-primary"
+            ng-click="audioPlayer.prev()">
+      <i class="fa fa-backward"></i>
+    </button>
+    <button type="button"
+            class="btn btn-sm btn-primary"
+            ng-click="audioPlayer.pause()">
+      <i class="fa fa-pause"></i>
+    </button>
+    <button type="button"
+            class="btn btn-sm btn-primary"
+            ng-click="audioPlayer.play()">
+      <i class="fa fa-play"></i>
+    </button>
+    <button type="button" class="btn btn-sm btn-primary">
+      <i class="fa fa-stop"></i>
+    </button>
+    <button type="button"
+            class="btn btn-sm btn-primary"
+            ng-click="audioPlayer.next(true)">
+      <i class="fa fa-forward"></i>
+    </button>
+  </div>
 
   <ul>
     <li ng-repeat="song in playlistFirebase">
