--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -104,3 +104,21 @@ body, h1, h2, h3, h4, h5 {
 .progress-bar {
   background-color: #f0f;
 }
+.add {
+  margin: 20px 0;
+  text-align: center;
+}
+.add button {
+  width: 160px;
+  height: 64px;
+  border: 0;
+  text-indent: -1000em;
+}
+.add .add-url {
+  background: url(../images/add-url.png) no-repeat center center;
+  background-size: 160px 64px;
+}
+.add .soundcloud {
+  background: url(../images/soundcloud.png) no-repeat center center;
+  background-size: 160px 64px;
+}
