--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -106,6 +106,7 @@ header h1 span:nth-child(7) { color: #90f; }
   width: 57px;
   margin-left: 10px;
 }
+
 .progress {
   position: absolute;
   left: 40px;
@@ -123,10 +124,11 @@ header h1 span:nth-child(7) { color: #90f; }
 
 .playlist {
   background: white;
-  border-radius: 6px;
   padding: 10px;
   margin: 20px 0;
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
+
 .add {
   margin: 20px 0;
   text-align: center;
@@ -144,4 +146,41 @@ header h1 span:nth-child(7) { color: #90f; }
 .add .soundcloud {
   background: url(../images/soundcloud.png) no-repeat center center;
   background-size: 160px 64px;
+}
+
+.songs ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.songs li {
+  margin: 0 0 5px 0;
+  padding: 0;
+  line-height: 32px;
+}
+.song-title {
+  font-size: 24px;
+  color: inherit;
+  border-bottom: 2px solid;
+}
+.song-title:hover {
+  text-decoration: none;
+}
+.song-artwork {
+  width: 100%;
+}
+.song-actions button {
+  border: 0;
+  background: no-repeat center center;
+  background-size: 16px 16px;
+  width: 16px;
+  text-indent: -1000em;
+}
+
+.song-actions .favorite {
+  background-image: url(../images/favorite.png);
+}
+
+.song-actions .remove {
+  background-image: url(../images/remove.png);
 }
