--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,7 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
   background: #fe9;
+  overflow: hidden;
 }
 
 body, h1, h2, h3, h4, h5 {
@@ -188,4 +189,14 @@ header h1 span:nth-child(7) { color: #90f; }
 
 .song-actions .remove {
   background-image: url(../images/remove.png);
+}
+
+.doge-text {
+  position: absolute;
+  white-space: nowrap;
+  z-index: -1000;
+  -webkit-animation-duration: 10s;
+  -moz-animation-duration: 10s;
+  -o-animation-duration: 10s;
+  animation-duration: 10s;
 }
