Enabled guest login.

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -5,7 +5,8 @@
     <i class="fa fa-github-alt"></i> Github Login
   </button>
   <button class="btn btn-primary"
-          name="guestLogin">
+          name="guestLogin"
+          ng-click="onLoginGuest()">
     <i class="fa fa-user"></i> Guest Login
   </button>
 </div>
