--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,7 +3,7 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
   background: #fe9;
-  overflow: hidden;
+  overflow: auto;
 }
 
 body, h1, h2, h3, h4, h5 {
@@ -159,8 +159,8 @@ header h1 span:nth-child(7) { color: #90f; }
   list-style: none;
   margin: 0;
   padding: 0;
-  height: 480px;
-  overflow-y: scroll;
+  height: 250px;
+  overflow: auto;
 }
 .songs li {
   margin: 0 0 5px 0;
