--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,10 +14,10 @@
   </div>
   <div class="pull-right">
     <a href="#/user">
-      Switch Tape
+      Switch Mix
     </a>
     <a href="#">
-      Your Tape
+      Your Mix
     </a>
     <a href="#" ng-click="logout()">Logout</a>
   </div>
@@ -30,9 +30,9 @@
   <img class="walkman-part" src="images/walkman-back.png">
   <img class="walkman-part" src="images/tape-back.png">
   <img class="tape-doge tape-doge-1" src="images/doge-1.png"
-    ng-class="{'tape-doge-spin': audioPlayer.playing}">
+       ng-class="{'tape-doge-spin': audioPlayer.playing}">
   <img class="tape-doge tape-doge-2" src="images/doge-2.png"
-    ng-class="{'tape-doge-spin': audioPlayer.playing}">
+       ng-class="{'tape-doge-spin': audioPlayer.playing}">
   <img class="walkman-part" src="images/tape-front.png">
   <img class="walkman-part" src="images/walkman-front.png">
   <div class="walkman-controls clearfix">
