--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,5 +1,10 @@
 <div class="row">
   <button class="btn btn-primary"
+          name="twitterLogin"
+          ng-click="onLoginTwitter()">
+    <i class="fa fa-twitter"></i> Twitter Login
+  </button>
+  <button class="btn btn-primary"
           name="githubLogin"
           ng-click="onLoginGithub()">
     <i class="fa fa-github-alt"></i> Github Login
