--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,4 +1,5 @@
 /* Space out content a bit */
+
 body {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -8,11 +9,6 @@ body {
 
 body, h1, h2, h3, h4, h5 {
   font-family: Comic Sans MS, Patrick Hand, cursive;
-}
-
-.mixdoge {
-  width: 512px;
-  margin: 0 auto;
 }
 
 header {
@@ -25,6 +21,14 @@ header h1 {
   line-height: 1;
 }
 
+header h1 span:nth-child(1) { color: #f90; }
+header h1 span:nth-child(2) { color: #f0f; }
+header h1 span:nth-child(3) { color: #09f; }
+header h1 span:nth-child(4) { color: #0f3; }
+header h1 span:nth-child(5) { color: #99f; }
+header h1 span:nth-child(6) { color: #00f; }
+header h1 span:nth-child(7) { color: #90f; }
+
 header a {
   border: 1px solid;
   border-radius: 6px;
@@ -35,13 +39,26 @@ header a {
   text-transform: lowercase;
 }
 
-header h1 span:nth-child(1) { color: #f90; }
-header h1 span:nth-child(2) { color: #f0f; }
-header h1 span:nth-child(3) { color: #09f; }
-header h1 span:nth-child(4) { color: #0f3; }
-header h1 span:nth-child(5) { color: #99f; }
-header h1 span:nth-child(6) { color: #00f; }
-header h1 span:nth-child(7) { color: #90f; }
+.landing {
+  text-align: center;
+}
+
+.landing header {
+  margin-bottom: 40px;
+}
+
+.landing header h1 {
+  font-size: 72px;
+}
+
+.landing .walkman {
+  margin-bottom: 40px;
+}
+
+.mixdoge {
+  width: 512px;
+  margin: 0 auto;
+}
 
 /* Walkman */
 .walkman {
