--- a/app/views/main.html
+++ b/app/views/main.html
@@ -106,6 +106,8 @@
   <button class="soundcloud" ng-click="openAddSoundcloudTrack()">Soundcloud</button>
 </div>
 
+</div>
+
 <script type="text/ng-template" id="add-soundcloud.html">
   <div class="modal-header">
     <h2>Add Soundcloud Track</h2>
