--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,190 +1,190 @@
 <div class="mixdoge">
 
-<header class="clearfix">
-  <div class="pull-left">
-    <h1>
-      <span>m</span>
-      <span>i</span>
-      <span>x</span>
-      <span>d</span>
-      <span>o</span>
-      <span>g</span>
-      <span>e</span>
-    </h1>
-  </div>
-  <div class="pull-right">
-    <a href="#/user">
-      Switch Mix
-    </a>
-    <a href="#">
-      Your Mix
-    </a>
-    <a href="#" ng-click="logout()">Logout</a>
-  </div>
-</header>
-
-<audio data-player-control="audioPlayer" data-playlist="playlist" audio-player>
-</audio>
-
-<div class="walkman">
-  <img class="walkman-part" src="images/walkman-back.png">
-  <img class="walkman-part" src="images/tape-back.png">
-  <img class="tape-doge tape-doge-1" src="images/doge-1.png"
-       ng-class="{'tape-doge-spin': audioPlayer.playing}">
-  <img class="tape-doge tape-doge-2" src="images/doge-2.png"
-       ng-class="{'tape-doge-spin': audioPlayer.playing}">
-  <img class="walkman-part" src="images/tape-front.png">
-  <img class="walkman-part" src="images/walkman-front.png">
-  <div class="walkman-controls clearfix">
-    <button
-      ng-click="audioPlayer.prev()">
-      Prev
-    </button>
-    <button
-      ng-show="audioPlayer.playing"
-      ng-click="audioPlayer.pause()">
-      Play
-    </button>
-    <button
-      ng-show="!audioPlayer.playing"
-      ng-click="audioPlayer.play()">
-      Play
-    </button>
-    <button
-      ng-click="audioPlayer.next(true)">
-      Next
-    </button>
-  </div>
-  <div class="progress">
-    <div class="progress-bar"
-         role="progressbar"
-         aria-valuemin="0"
-         aria-valuemax="100"
-         ng-style="{ width: audioPlayer.currentTime*100/audioPlayer.duration + '%' }"
-         style="width: 100.00000000000001%; height: 40px">
-      <span class="sr-only ng-binding" style="height: 40px">100.00000000000001% Complete</span>
+  <header class="clearfix">
+    <div class="pull-left">
+      <h1>
+        <span>m</span>
+        <span>i</span>
+        <span>x</span>
+        <span>d</span>
+        <span>o</span>
+        <span>g</span>
+        <span>e</span>
+      </h1>
     </div>
-    <div class="time" ng-show="audioPlayer.formatTime" style="height: 40px">
-      <span class="ng-binding">{{ audioPlayer.currentTime | number:2 }}</span>
-      <b>/</b>
-      <span class="ng-binding">{{ audioPlayer.duration | number:2 }}</span>
+    <div class="pull-right">
+      <a href="#/user">
+        Switch Mix
+      </a>
+      <a href="#">
+        Your Mix
+      </a>
+      <a href="#" ng-click="logout()">Logout</a>
+    </div>
+  </header>
+
+  <audio data-player-control="audioPlayer" data-playlist="playlist" audio-player>
+  </audio>
+
+  <div class="walkman">
+    <img class="walkman-part" src="images/walkman-back.png">
+    <img class="walkman-part" src="images/tape-back.png">
+    <img class="tape-doge tape-doge-1" src="images/doge-1.png"
+         ng-class="{'tape-doge-spin': audioPlayer.playing}">
+    <img class="tape-doge tape-doge-2" src="images/doge-2.png"
+         ng-class="{'tape-doge-spin': audioPlayer.playing}">
+    <img class="walkman-part" src="images/tape-front.png">
+    <img class="walkman-part" src="images/walkman-front.png">
+    <div class="walkman-controls clearfix">
+      <button
+         ng-click="audioPlayer.prev()">
+        Prev
+      </button>
+      <button
+         ng-show="audioPlayer.playing"
+         ng-click="audioPlayer.pause()">
+        Play
+      </button>
+      <button
+         ng-show="!audioPlayer.playing"
+         ng-click="audioPlayer.play()">
+        Play
+      </button>
+      <button
+         ng-click="audioPlayer.next(true)">
+        Next
+      </button>
+    </div>
+    <div class="progress">
+      <div class="progress-bar"
+           role="progressbar"
+           aria-valuemin="0"
+           aria-valuemax="100"
+           ng-style="{ width: audioPlayer.currentTime*100/audioPlayer.duration + '%' }"
+           style="width: 100.00000000000001%; height: 40px">
+        <span class="sr-only ng-binding" style="height: 40px">100.00000000000001% Complete</span>
+      </div>
+      <div class="time" ng-show="audioPlayer.formatTime" style="height: 40px">
+        <span class="ng-binding">{{ audioPlayer.currentTime | number:2 }}</span>
+        <b>/</b>
+        <span class="ng-binding">{{ audioPlayer.duration | number:2 }}</span>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="playlist">
+  <div class="playlist">
 
-<div class="songs">
-  <ul>
-    <li class="row" ng-repeat="song in playlistFirebase">
-      <div class="col-md-2">
-        <img class="song-artwork"
-             src="{{ song.artwork_url }}"
-             ng-click="playSong($index)">
-      </div>
-      <div class="col-md-8">
-        <a class="song-title" href="javascript:void(0)"
-           ng-class="{active: audioPlayer.currentTrack - 1 === $index}"
-           ng-click="playSong($index)">
-          {{ song.title }}
-        </a>
-      </div>
-      <div class="song-actions col-md-2">
-        <button class="favorite" ng-click="updateSong(song)">
-          Favorite
-        </button>
-        <button class="remove" ng-click="removeSong($index)">
-          Remove
-        </button>
-      </div>
-    </li>
-  </ul>
-</div>
+    <div class="songs">
+      <ul>
+        <li class="row" ng-repeat="song in playlistFirebase">
+          <div class="col-md-2">
+            <img class="song-artwork"
+                 src="{{ song.artwork_url }}"
+                 ng-click="playSong($index)">
+          </div>
+          <div class="col-md-8">
+            <a class="song-title" href="javascript:void(0)"
+               ng-class="{active: audioPlayer.currentTrack - 1 === $index}"
+               ng-click="playSong($index)">
+              {{ song.title }}
+            </a>
+          </div>
+          <div class="song-actions col-md-2">
+            <button ng-class="{true: 'favorite-filled', false: 'favorite'}[isFavorite($index)]" ng-click="toggleFavorite($index)">
+              Favorite
+            </button>
+            <button class="remove" ng-click="removeSong($index)">
+              Remove
+            </button>
+          </div>
+        </li>
+      </ul>
+    </div>
 
-<div class="add" ng-show="!disallowAdding">
-  <button class="add-url" ng-click="openAddSongUrl()">Add URL</button>
-  <button class="soundcloud" ng-click="openAddSoundcloudTrack()">Soundcloud</button>
-</div>
+    <div class="add" ng-show="!disallowAdding">
+      <button class="add-url" ng-click="openAddSongUrl()">Add URL</button>
+      <button class="soundcloud" ng-click="openAddSoundcloudTrack()">Soundcloud</button>
+    </div>
 
-</div>
-
-<script type="text/ng-template" id="add-soundcloud.html">
-  <div class="modal-header">
-    <h2>Add Soundcloud Track</h2>
   </div>
 
-  <div class="modal-body">
-    <pager total-items="10000"
-           on-select-page="setPage(page)"
-           page="currentPage">
-    </pager>
+  <script type="text/ng-template" id="add-soundcloud.html">
+    <div class="modal-header">
+      <h2>Add Soundcloud Track</h2>
+    </div>
 
-    <ul class="list-group" style="height: auto;overflow:auto;">
-      <li class="list-group-item row" ng-repeat="track in tracks">
-        <div class="col-md-2" style="margin-right: 20px">
-          <img ng-src="{{ track.artwork_url || 'images/doge_avatar.jpeg' }}"
-               style="max-width: 100px; max-height: 100px"/>
+    <div class="modal-body">
+      <pager total-items="10000"
+             on-select-page="setPage(page)"
+             page="currentPage">
+      </pager>
+
+      <ul class="list-group" style="height: auto;overflow:auto;">
+        <li class="list-group-item row" ng-repeat="track in tracks">
+          <div class="col-md-2" style="margin-right: 20px">
+            <img ng-src="{{ track.artwork_url || 'images/doge_avatar.jpeg' }}"
+                 style="max-width: 100px; max-height: 100px"/>
+          </div>
+          <div class="col-md-9">
+            <a href="javascript:void(0)" class="list-group-item" ng-click="ok($index)">
+              {{ track.title }} - {{ track.user.username }}
+            </a>
+          </div>
+        </li>
+      </ul>
+
+      <pager total-items="10000"
+             on-select-page="setPage(page)"
+             page="currentPage">
+      </pager>
+    </div>
+
+    <div class="modal-footer">
+      <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+  </script>
+
+  <script type="text/ng-template" id="add-song.html">
+    <div class="modal-header">
+      <h2>Add Song</h2>
+    </div>
+
+    <div class="modal-body">
+      <form class="form-horizontal col-md-12" role="form">
+        <div class="form-group">
+          <label for="songTitle"
+                 class="control-label">
+            Title
+          </label>
+          <input id="songTitle"
+                 type="text"
+                 name="songTitle"
+                 class="form-control"
+                 ng-model="song.title">
         </div>
-        <div class="col-md-9">
-          <a href="javascript:void(0)" class="list-group-item" ng-click="ok($index)">
-            {{ track.title }} - {{ track.user.username }}
-          </a>
+        <div class="form-group">
+          <label for="songUrl"
+                 class="control-label">
+            Source URL
+          </label>
+          <input id="songUrl"
+                 type="text"
+                 name="songUrl"
+                 class="form-control"
+                 ng-model="song.src">
         </div>
-      </li>
-    </ul>
+      </form>
+    </div>
 
-    <pager total-items="10000"
-           on-select-page="setPage(page)"
-           page="currentPage">
-    </pager>
+    <div class="modal-footer">
+      <button class="btn btn-primary" ng-click="ok()">Save</button>
+      <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+  </script>
+
+  <div class="footer">
+    <p><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://ss14-team-72.divshot.io" data-text="Check out MixDoge by Daruma Tactics" data-via="staticshowdown">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
   </div>
-
-  <div class="modal-footer">
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-  </div>
-</script>
-
-<script type="text/ng-template" id="add-song.html">
-  <div class="modal-header">
-    <h2>Add Song</h2>
-  </div>
-
-  <div class="modal-body">
-    <form class="form-horizontal col-md-12" role="form">
-      <div class="form-group">
-        <label for="songTitle"
-               class="control-label">
-          Title
-        </label>
-        <input id="songTitle"
-               type="text"
-               name="songTitle"
-               class="form-control"
-               ng-model="song.title">
-      </div>
-      <div class="form-group">
-        <label for="songUrl"
-               class="control-label">
-          Source URL
-        </label>
-        <input id="songUrl"
-               type="text"
-               name="songUrl"
-               class="form-control"
-               ng-model="song.src">
-      </div>
-    </form>
-  </div>
-
-  <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">Save</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-  </div>
-</script>
-
-<div class="footer">
-  <p><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://ss14-team-72.divshot.io" data-text="Check out MixDoge by Daruma Tactics" data-via="staticshowdown">Tweet</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
-</div>
 
 </div>
