much better default font

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 body, h1, h2, h3, h4, h5 {
-  font-family: Comic Sans MS, Patrick Hand, cursive;
+  font-family: Comic Sans MS, Coming Soon, cursive;
 }
 
 header {
