--- a/app/views/main.html
+++ b/app/views/main.html
@@ -112,17 +112,21 @@
 
   <script type="text/ng-template" id="add-soundcloud.html">
     <div class="modal-header">
-      <h2>Add Soundcloud Track</h2>
-    </div>
-
-    <div class="modal-body">
       <pager total-items="10000"
              on-select-page="setPage(page)"
              page="currentPage">
       </pager>
+    </div>
 
-      <ul class="list-group" style="height: auto;overflow:auto;">
-        <li class="list-group-item row" ng-repeat="track in tracks">
+    <div class="modal-body">
+      <center style="margin:40px 0px" ng-show="isLoading">
+        <img src="images/loader.gif"/>
+      </center>
+
+      <ul class="list-group"
+          ng-show="!isLoading"
+          style="height: auto;overflow:auto;">
+        <li class="row" ng-repeat="track in tracks">
           <div class="col-md-2" style="margin-right: 20px">
             <img ng-src="{{ track.artwork_url || 'images/doge_avatar.jpeg' }}"
                  style="max-width: 100px; max-height: 100px"/>
@@ -134,15 +138,16 @@
           </div>
         </li>
       </ul>
+    </div>
 
+    <div class="modal-footer">
       <pager total-items="10000"
              on-select-page="setPage(page)"
              page="currentPage">
       </pager>
-    </div>
-
-    <div class="modal-footer">
-      <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+      <center>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+      </center>
     </div>
   </script>
 
